New attempt on iteratorShortestPath logic.
Note: Deadline is in less than three weeks.